Add integral estimates & ci for generic functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(confint_pace)
 export(cum_vol)
 export(cum_vol_unif)
 export(degree)
+export(mc_ci)
 export(mc_int)
 export(mc_scores)
 export(pace_scores)
