Add subsampling prediction intervals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(cum_vol_unif)
 export(degree)
 export(mc_ci)
 export(mc_int)
+export(mc_pi)
 export(mc_scores)
 export(pace_scores)
 export(weights_loo)
