Update 2d int estim and add 2d PI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(bm_kl_rd)
 export(boat_cdf)
+export(bs_kl)
 export(class_score)
 export(confint_lim)
 export(confint_mc)
@@ -11,7 +12,9 @@ export(cum_vol_unif)
 export(degree)
 export(mc_ci)
 export(mc_int)
+export(mc_int2d)
 export(mc_pi)
+export(mc_pi2d)
 export(mc_scores)
 export(pace_scores)
 export(weights_loo)
