Add 2D Riemann, clean code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ export(mc_pi)
 export(mc_pi2d)
 export(mc_scores)
 export(pace_scores)
+export(riemann_2d)
 export(weights_loo)
 export(weights_loo_unif)
