--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,17 @@
 export(bm_kl_rd)
 export(boat_cdf)
 export(bs_kl)
+export(cdf_series)
 export(class_score)
 export(confint_lim)
 export(confint_mc)
 export(confint_pace)
+export(cos_basis)
 export(cum_vol)
 export(cum_vol_unif)
 export(degree)
+export(den_series)
+export(int_cos_basis)
 export(mc_ci)
 export(mc_int)
 export(mc_int2d)
@@ -17,6 +21,9 @@ export(mc_pi)
 export(mc_pi2d)
 export(mc_scores)
 export(pace_scores)
+export(pi_subsam)
+export(pi_subsam2d)
 export(riemann_2d)
+export(splines_mean)
 export(weights_loo)
 export(weights_loo_unif)
